--- a/AboutUs.html
+++ b/AboutUs.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav">
             <li class="nav-item"></li>
-            <a class="nav-link text-white" href="">Home</a>
+            <a class="nav-link text-white" href="index.html">Home</a>
             <li class="nav-item"></li>
             <a class="nav-link text-white" href="AboutUs.html" target="blank">AboutUs</a>
             <li class="nav-item"></li>
