--- a/AboutUs.html
+++ b/AboutUs.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
     <style>
-    .navbar nav-item{
-        border-top-right-radius: 5%;
+    .navbar .nav-item{
+        background: silver;
+        border-top-right-radius:25px;
+        border-bottom-left-radius: 25px;
+    }
+    .navbar .btn{
+        border-top-right-radius:25px;
+        border-bottom-left-radius: 25px;
     }
 </style>
 </head>
