--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+  />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Project</title>
+    <style>
+      .navbar .btn{
+        border-top-right-radius: 25px;
+        border-bottom-left-radius: 25px;
+      }
+      .navbar .nav-item{
+        background: silver;
+        border-top-right-radius: 25px;
+        border-bottom-left-radius: 25px;
+
+      }
+    </style>
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-primary">
@@ -109,8 +125,9 @@
 
     <!--Cards for Our team  -->
 <div class="jumbotron jumbotron-fluid bg-dark m-5">
-    <div class="container">
-        <h3 class="font-weight-bold text-center text-danger">Our Team</h3>
+  <h3 class="font-weight-bold text-center text-danger">Our Team</h3>
+    <div class="container animate__animate__zoomOut">
+        
         <div class="row">
             <div class="col-md-4">
                 <div class="card my-3 bg-primary text-white">
