--- a/AboutUs.html
+++ b/AboutUs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
     <style>
-    .navbar .nav-item{
+    .navbar .nav-item:hover{
         background: silver;
         border-top-right-radius:25px;
         border-bottom-left-radius: 25px;
