--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         border-top-right-radius: 25px;
         border-bottom-left-radius: 25px;
       }
-      .navbar .nav-item{
+      .navbar .nav-item:hover{
         background: silver;
         border-top-right-radius: 25px;
         border-bottom-left-radius: 25px;
@@ -126,8 +126,7 @@
     <!--Cards for Our team  -->
 <div class="jumbotron jumbotron-fluid bg-dark m-5">
   <h3 class="font-weight-bold text-center text-danger">Our Team</h3>
-    <div class="container animate__animate__zoomOut">
-        
+    <div class="container animate__animate__zoomOut"> 
         <div class="row">
             <div class="col-md-4">
                 <div class="card my-3 bg-primary text-white">
