--- a/AboutUs.html
+++ b/AboutUs.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
     <style>
-    .navbar .nav-item:hover{
-        background: silver;
+         .navbar .btn{
         border-top-right-radius:25px;
         border-bottom-left-radius: 25px;
     }
-    .navbar .btn{
+    .navbar .nav-item:hover{
+        background: silver;
         border-top-right-radius:25px;
         border-bottom-left-radius: 25px;
     }
@@ -19,16 +19,19 @@
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-primary">
-        <a class="navbar-brand" href=""> <img src="Images/2.jpg" class="img-thumbnail" width="40" alt=""> Logo</a>
+        <a class="navbar-brand" href=""> <img src="Images/2.jpg" class="img-thumbnail" width="40" alt=""></a>
         <button class="navbar-toggler" data-target="#nav" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav">
-            <li class="nav-item"></li>
+            <li class="nav-item">
             <a class="nav-link text-white" href="index.html">Home</a>
-            <li class="nav-item"></li>
+        </li>
+            <li class="nav-item">
             <a class="nav-link text-white" href="AboutUs.html" target="blank">AboutUs</a>
-            <li class="nav-item"></li>
+        </li>
+            <li class="nav-item">
             <a class="nav-link text-white" href="">ContactUs</a>
+        </li>
         </ul>
     </div>
     <button class="btn btn-secondary" data-target="#signin" data-toggle="modal">Signup</button>
