--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-primary">
-        <a class="navbar-brand" href=""> <img src="Images/2.jpg" class="img-thumbnail" width="40" alt=""> Logo</a>
+        <a class="navbar-brand" href=""> <img src="Images/2.jpg" class="img-thumbnail" width="40" alt=""></a>
         <button class="navbar-toggler" data-target="#nav" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav">
