--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
         </script>
 
     <!--Cards for Our team  -->
-<div class="jumbotron jumbotron-fluid bg-dark m-5">
+<div class="jumbotron jumbotron-fluid bg-dark">
   <h3 class="font-weight-bold text-center text-danger">Our Team</h3>
-    <div class="container animate__animated animate__zoomOut"> 
+    <div class="container animate__animated animate__zoomIn"> 
         <div class="row">
             <div class="col-md-4">
                 <div class="card my-3 bg-primary text-white">
