--- a/index.html
+++ b/index.html
@@ -30,13 +30,22 @@
         <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link text-white" href="">Home</a>
+            <a class="nav-link text-white" href="">HOME</a>
           </li>
             <li class="nav-item">
-            <a class="nav-link text-white" href="AboutUs.html">AboutUs</a>
+            <a class="nav-link text-white" href="AboutUs.html">ABOUT US</a>
           </li> 
+          <li class="nav-item">
+            <a class="nav-link text-white" href="">ACTIVITES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="">GALLERY</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="">MEDIA</a>
+          </li>
             <li class="nav-item">
-            <a class="nav-link text-white" href="Form.html">ContactUs</a>
+            <a class="nav-link text-white" href="Form.html">CONTACT</a>
           </li>
         </ul>
     </div>
