--- a/AboutUs.html
+++ b/AboutUs.html
@@ -100,7 +100,7 @@
             <div class="row">
     <div class="col-sm-4">
     <div class="item">
-    <img src="/Images1/I7.jpeg" alt="" width="300px" height="250px" class="m-5" style="border:1px solid orange;border: radius 60px;box-shadow:6px 6px  #787878">
+    <img src="/Images/I7.jpeg" alt="" width="300px" height="250px" class="m-5" style="border:1px solid orange;border: radius 60px;box-shadow:6px 6px  #787878">
 </div>
 </div>
 <div class="col-sm">
@@ -120,7 +120,7 @@
         </div>
 <div class="col-sm-4">
 <div class="item">
-<img src="/Images1/I8.jpeg" alt="" width="300px" height="250px" class="m-5" style="border:1px solid orange;border: radius 60px;box-shadow:6px 6px #787878">
+<img src="/Images/I8.jpeg" alt="" width="300px" height="250px" class="m-5" style="border:1px solid orange;border: radius 60px;box-shadow:6px 6px #787878">
 </div>
 </div>
 </div>
