--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a class="nav-link text-white" href="">MEDIA</a>
           </li>
             <li class="nav-item">
-            <a class="nav-link text-white" href="Form.html">CONTACT</a>
+            <a class="nav-link text-white" href="ContactUs.html">CONTACT</a>
           </li>
         </ul>
     </div>
