--- a/ContactUs.html
+++ b/ContactUs.html
@@ -31,14 +31,23 @@
         <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link text-white" href="">Home</a>
-        </li>
-            <li class="nav-item">
-            <a class="nav-link text-white" href="AboutUs.html" target="blank">AboutUs</a>
-        </li>
-            <li class="nav-item">
-            <a class="nav-link text-white" href="">ContactUs</a>
-        </li>
+                <a class="nav-link text-white" href="">HOME</a>
+              </li>
+                <li class="nav-item">
+                <a class="nav-link text-white" href="AboutUs.html">ABOUT US</a>
+              </li> 
+              <li class="nav-item">
+                <a class="nav-link text-white" href="">ACTIVITES</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="">GALLERY</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="">MEDIA</a>
+              </li>
+                <li class="nav-item">
+                <a class="nav-link text-white" href="ContactUs.html">CONTACT</a>
+              </li>
         </ul>
     </div>
     <button class="btn btn-secondary" data-target="#signin" data-toggle="modal">Signup</button>
@@ -83,6 +92,142 @@
 </div>
 </form>
 </div>
+
+<!-- Footer -->
+<footer class="page-footer font-small bg-dark text-white pt-4">
+
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
+  
+      <!-- Footer links -->
+      <div class="row text-center text-md-left mt-3 pb-3">
+  
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Company name</h6>
+          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
+            consectetur
+            adipisicing elit.</p>
+        </div>
+        <!-- Grid column -->
+  
+        <hr class="w-100 clearfix d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+          <p>
+            <a href="#!" class="text-white" >MDBootstrap</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white" >MDWordPress</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white" >BrandFlow</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white" >Bootstrap Angular</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+  
+        <hr class="w-100 clearfix d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
+          <p>
+            <a href="#!" class="text-white" >Your Account</a>
+          </p>
+          <p>
+            <a href="#!"class="text-white">Become an Affiliate</a>
+          </p>
+          <p>
+            <a href="#!"class="text-white">Shipping Rates</a>
+          </p>
+          <p>
+            <a href="#!"class="text-white">Help</a>
+          </p>
+        </div>
+  
+        <!-- Grid column -->
+        <hr class="w-100 clearfix d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+          <p>
+            <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+          <p>
+            <i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+          <p>
+            <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+          <p>
+            <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Footer links -->
+  
+      <hr>
+  
+      <!-- Grid row -->
+      <div class="row d-flex align-items-center">
+  
+        <!-- Grid column -->
+        <div class="col-md-7 col-lg-8">
+  
+          <!--Copyright-->
+          <p class="text-center text-md-left">© 2020 Copyright:
+            <a class="text-white" href="https://mdbootstrap.com/">
+              <strong> MDBootstrap.com</strong>
+            </a>
+          </p>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-md-5 col-lg-4 ml-lg-0">
+  
+          <!-- Social buttons -->
+          <div class="text-center text-md-right">
+            <ul class="list-unstyled list-inline">
+              <li class="list-inline-item">
+                <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-google-plus-g"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+  
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Grid row -->
+  
+    </div>
+    <!-- Footer Links -->
+  
+  </footer>
+  <!-- Footer -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
