--- a/ContactUs.html
+++ b/ContactUs.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link text-white" href="">HOME</a>
+                <a class="nav-link text-white" href="index.html">HOME</a>
               </li>
                 <li class="nav-item">
                 <a class="nav-link text-white" href="AboutUs.html">ABOUT US</a>
@@ -46,7 +46,7 @@
                 <a class="nav-link text-white" href="">MEDIA</a>
               </li>
                 <li class="nav-item">
-                <a class="nav-link text-white" href="ContactUs.html">CONTACT</a>
+                <a class="nav-link text-white" href="">CONTACT</a>
               </li>
         </ul>
     </div>
