--- a/AboutUs.html
+++ b/AboutUs.html
@@ -46,10 +46,10 @@
     <div class="collapse navbar-collapse" id="nav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-white" href="">HOME</a>
+        <a class="nav-link text-white" href="index.html">HOME</a>
       </li>
         <li class="nav-item">
-        <a class="nav-link text-white" href="AboutUs.html">ABOUT US</a>
+        <a class="nav-link text-white" href="">ABOUT US</a>
       </li> 
       <li class="nav-item">
         <a class="nav-link text-white" href="">ACTIVITES</a>
