--- a/AboutUs.html
+++ b/AboutUs.html
@@ -46,7 +46,7 @@
     <div class="collapse navbar-collapse" id="nav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-white" href="index.html">HOME</a>
+        <a class="nav-link text-white" href="Basicproject.html">HOME</a>
       </li>
         <li class="nav-item">
         <a class="nav-link text-white" href="">ABOUT US</a>
