--- a/ContactUs.html
+++ b/ContactUs.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link text-white" href="index.html">HOME</a>
+                <a class="nav-link text-white" href="Basicproject.html">HOME</a>
               </li>
                 <li class="nav-item">
                 <a class="nav-link text-white" href="AboutUs.html">ABOUT US</a>
