--- a/AboutUs.html
+++ b/AboutUs.html
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse" id="nav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-white" href="Home.html">HOME</a>
+        <a class="nav-link text-white" href="">HOME</a>
       </li>
         <li class="nav-item">
         <a class="nav-link text-white" href="">ABOUT US</a>
