--- a/AboutUs.html
+++ b/AboutUs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-   
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
     <meta charset="UTF-8">
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse" id="nav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-white" href="">HOME</a>
+        <a class="nav-link text-white" href="Home.html">HOME</a>
       </li>
         <li class="nav-item">
         <a class="nav-link text-white" href="">ABOUT US</a>
