--- a/ContactUs.html
+++ b/ContactUs.html
@@ -11,7 +11,7 @@
             width: 800px;
         }
         .jumbotron-fluid .display-4{
-            background-image: url(/Images/21.jpg);
+            background-image: url(/Images1/21.jpg);
             min-height: 400px;
         }
         .navbar .btn{
