--- a/ContactUs.html
+++ b/ContactUs.html
@@ -12,6 +12,8 @@
         }
         .jumbotron-fluid .display-4{
             background-image: url(Images1/21.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
             min-height: 400px;
         }
         .navbar .btn{
