--- a/AboutUs.html
+++ b/AboutUs.html
@@ -79,13 +79,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img  src="/Images1/I10.jpg" alt="">
+            <img  src="Images1/I10.jpg" alt="">
           </div>
           <div class="carousel-item">
-            <img  src="/Images1/I11.jpg" alt="">
+            <img  src="Images1/I11.jpg" alt="">
           </div>
           <div class="carousel-item">
-            <img  src="/Images1/I12.jpg" alt="">
+            <img  src="Images1/I12.jpg" alt="">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -110,7 +110,7 @@
             <div class="row">
     <div class="col-sm-4">
     <div class="item">
-    <img src="/Images/I7.jpeg" alt="" width="300px" height="250px" class="m-5" style="border:1px solid orange;border: radius 60px;box-shadow:6px 6px  #787878">
+    <img src="Images/I7.jpeg" alt="" width="300px" height="250px" class="m-5" style="border:1px solid orange;border: radius 60px;box-shadow:6px 6px  #787878">
 </div>
 </div>
 <div class="col-sm">
@@ -130,7 +130,7 @@
         </div>
 <div class="col-sm-4">
 <div class="item">
-<img src="/Images/I8.jpeg" alt="" width="300px" height="250px" class="m-5" style="border:1px solid orange;border: radius 60px;box-shadow:6px 6px #787878">
+<img src="Images/I8.jpeg" alt="" width="300px" height="250px" class="m-5" style="border:1px solid orange;border: radius 60px;box-shadow:6px 6px #787878">
 </div>
 </div>
 </div>
