--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,7 +33,7 @@
           border-bottom-left-radius: 25px;
         }
         .jumbotron-fluid .display-4{
-          background-image: url(Images1/23.jpg);
+          background-image: url(Images1/J1.jpg);
           height: 400px;
           background-repeat: no-repeat;
           background-size: cover;
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse" id="nav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-white" href="Home.html">HOME</a>
+        <a class="nav-link text-white" href="index.html">HOME</a>
       </li>
         <li class="nav-item">
         <a class="nav-link text-white" href="">ABOUT US</a>
