--- a/ContactUs.html
+++ b/ContactUs.html
@@ -11,7 +11,7 @@
             width: 800px;
         }
         .jumbotron-fluid .display-4{
-            background-image: url(Images1/20.jpg);
+            background-image: url(Images1/J2.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             min-height: 400px;
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link text-white" href="Home.html">HOME</a>
+                <a class="nav-link text-white" href="index.html">HOME</a>
               </li>
                 <li class="nav-item">
                 <a class="nav-link text-white" href="AboutUs.html">ABOUT US</a>
