--- a/AboutUs.html
+++ b/AboutUs.html
@@ -69,7 +69,7 @@
 <button class="btn btn-secondary" data-target="#signin" data-toggle="modal">Signup</button>
 </nav>
 <div class="jumbotron-fluid bg-secondary my-5">
-<h1 class="display-4">ABOUT US</h1>
+<h1 class="display-4 text-primary">ABOUT US</h1>
 </div>
 
     <div class="jumbotron">
