--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           </li>
         </ul>
     </div>
-    <button class="btn btn-secondary" data-target="#login" data-toggle="modal" >Sign In</button>
-    <button class="btn btn-secondary" data-target="#signin" data-toggle="modal">Sign Up</button>
+    <button class="btn btn-secondary" data-target="#login" data-toggle="modal" >Sign Up</button>
+    <button class="btn btn-secondary" data-target="#signin" data-toggle="modal">Log In</button>
     </nav>
 <!--Nav bar closed  -->
 
@@ -175,7 +175,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title">Sign Up</h3>
+                    <h3 class="modal-title">Log In</h3>
                     <button class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
