--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <div class="modal-dialog">
       <div class="modal-content">
           <div class="modal-header">
-              <h3 class="modal-title">Login-Form</h3>
+              <h3 class="modal-title">Create a new account</h3>
               <button class="close" data-dismiss="modal">&times;</button>
           </div>
               <div class="modal-body">
