--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
           </li>
         </ul>
     </div>
-    <button class="btn btn-secondary" data-target="#login" data-toggle="modal" >Sign Up</button>
-    <button class="btn btn-secondary" data-target="#signin" data-toggle="modal">Log In</button>
+    <button class="btn ml-5 btn-outline-success my-2 my-sm-0"  data-target="#login" data-toggle="modal" data-backdrop="static" type="submit">SignUp</button>
+    <button class="btn btn-outline-success my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">SignIn</button>
+
     </nav>
 <!--Nav bar closed  -->
 
@@ -102,97 +103,87 @@
 
 
 <div class="modal fade" id="login">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-sm">
       <div class="modal-content">
-          <div class="modal-header">
-              <h3 class="modal-title">Create a new account</h3>
-              <button class="close" data-dismiss="modal">&times;</button>
-          </div>
-              <div class="modal-body">
-                  <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate pariatur natus modi ipsa provident esse debitis repellat ut quos delectus.</p> -->
-                  <form class="m mx-auto py-5 mx-5 needs-validation" novalidate>
-                      <div class="container bg-white py-5">
-                          <div class="row">
-                  <div class="col">
-                      <div class="form-group">
-                      <label for="user">Username</label>
-                      <span class="input-group-addon">
-                          <i class="fa fa-user" aria-hidden="true"></i>
-                      </span>
-                      <input type="text" id="user" class="form-control" required placeholder="Enter username">
-                      <div class="invalid-feedback">Please enter valid username</div>
-                  </div>
-              </div>
-                  <div class="col">
-                      <div class="form-group">
-                      <label for="pass">Password</label>
-                      <span class="input-group-addon">
-                          <i class="fa fa-eye" aria-hidden="true"></i>
-                      </span>
-                      <input type="text" id="pass" class="form-control" required placeholder="Enter Password">
-                      <div class="invalid-feedback">Please enter the password</div>
-                  </div>
-              </div>
-              </div>
-                  <div class="col">
-                      <div class="form-group">
-                      <label for="email">Email-Id</label>
-                      <span class="input-group-addon">
-                          <i class="fa fa-envelope" aria-hidden="true"></i>
-                      </span>
-                      <input type="text" id="email" class="form-control" required placeholder="Enter Email-Id">
-                  </div>
-                 <div class="form-group">
-                      <label for="">Gender</label>
-                  <div class="form-check form-check-inline">
-                      <input type="radio" id="m" name="v" class="form-check-input">
-                      <label class="form-check-label" for="m">Male</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                      <input type="radio" id="f" name="v" class="form-check-input">
-                      <label class="form-check-label" for="f">Female</label>
-                  </div>
-                  </div>
-                  <div class="form-check">
-                      <input type="checkbox" id="" class="form-check-input">
-                      <label class="form-check-label" for="">RememberMe</label>
-                  </div>
-                  <div>
-                  <button type="submit" class="btn btn bg-success w-100">Submit</button>
-              </div>
-              </form>
-          </div>
+  <div class="modal-header">
+      <h3 class="modal-title">Login-Form</h3>
+      <button class="close" data-dismiss="modal">&times;</button>
+  </div>
+<div class="modal-body">
+ <form class="m ml-auto mx-auto needs-validation " novalidate>
+  <div class="container bg-white py-5">
+  <div class="row">
+      <div class="col">
+  <div class="form-group">
+  <label for="user">Username</label>
+
+  <span class="input-group-addon">
+      <i class="fa fa-user" aria-hidden="true"></i>
+  </span>
+  <input type="text"  id="user" class="form-control" required>
+  <div class="invalid-feedback">username is invalid</div>
+</div>
+</div>
+<div class="col">
+<div class="form-group">
+  <label for="pass">Password</label>
+  <span class="input-group-addon" id="addon-wrapping">
+  <i class="fa fa-user" aria-hidden="true"></i>
+  </span>
+  <input type="password" id="pass" class="form-control" required>
+<small class="invalid-feedback">Please enter the valid password</small>
+</div>
+</div>
+</div>
+<div class="form-group">
+  <label for="pass">Email-id</label>
+  <input type="email" id="pass" class="form-control" required>
+</div>
+<div class="form-group">
+<label for="gender">Gender</label>
+<div class="form-check-inline">
+<input type="radio" name="gender" id="gen" class="form-check-input">
+<label class="form-check-label" for="gen">M</label>
+</div>
+<div class="form-check-inline">
+<input type="radio" name="gender" id="r" class="form-check-input">
+<label class="form-check-label" for="r">F</label>
+</div>
+</div>
+<div class="form-group">
+<div class="form-check">
+<input type="checkbox" id="box" class="form-check-input">
+<label for="box" class="form-check-label">RememberMe</label>
+</div>
+</div>
+<button type="submit" class="btn btn-success btn-lg w-100">Submit</button>
+</div>    
+</form>
+</div>
       </div>
   </div>
 </div>
+<div class="modal fade" id="signin">
+<div class="modal-dialog">
+  <div class="modal-content">
+      <div class="modal-header">
+          <h3 class="modal-title">SignUp</h3>
+<button class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+          <form>
+              <label for="email">Email</label>
+              <input type="email" id="email" class="form-control" required>
+              <label for="pass">Password</label>
+              <input type="password" id="pass" class="form-control">
+          <button  class="btn btn-success">Submit</button>
+          <button  class="btn btn-success" data-dismiss="modal">Close</button>
+          </form>
+      </div>
+  </div>
+</div>
+</div>
 
-
-
-
-
-
-    <div class="modal" id="signin">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 class="modal-title">Log In</h3>
-                    <button class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <label for="email">Email</label>
-                        <input type="email" id="email" class="form-control" required>
-                        
-                        <label for="pass">Password</label>
-                        <input type="password" id="pass" class="form-control">
-                        <br>
-                        <button class="btn btn-success">Submit</button>
-                        <button class="btn btn-success" data-dismiss="modal">Close</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
         <script>
             var form=document .querySelector('.needs-validation');
             form .addEventListener('submit',function(event){
