--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           </li>
         </ul>
     </div>
-    <button class="btn ml-5 btn-outline-success my-2 my-sm-0"  data-target="#login" data-toggle="modal" data-backdrop="static" type="submit">SignUp</button>
-    <button class="btn btn-outline-success my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">SignIn</button>
+    <button class="btn ml-5 btn-outline-success my-2 my-sm-0"  data-target="#login" data-toggle="modal" data-backdrop="static" type="submit">Sign Up</button>
+    <button class="btn btn-outline-success my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">Log In</button>
 
     </nav>
 <!--Nav bar closed  -->
@@ -103,41 +103,43 @@
 
 
 <div class="modal fade" id="login">
-  <div class="modal-dialog modal-sm">
+  <div class="modal-dialog">
       <div class="modal-content">
   <div class="modal-header">
-      <h3 class="modal-title">Login-Form</h3>
+      <h3 class="modal-title">Create a new account</h3>
       <button class="close" data-dismiss="modal">&times;</button>
   </div>
 <div class="modal-body">
- <form class="m ml-auto mx-auto needs-validation " novalidate>
+ <form class="m mx-auto py-5 mx-5 needs-validation " novalidate>
   <div class="container bg-white py-5">
   <div class="row">
       <div class="col">
   <div class="form-group">
   <label for="user">Username</label>
-
   <span class="input-group-addon">
       <i class="fa fa-user" aria-hidden="true"></i>
   </span>
-  <input type="text"  id="user" class="form-control" required>
-  <div class="invalid-feedback">username is invalid</div>
+  <input type="text"  id="user" class="form-control" required placeholder="Enter Username">
+  <div class="invalid-feedback">Please enter valid username</div>
 </div>
 </div>
 <div class="col">
 <div class="form-group">
   <label for="pass">Password</label>
-  <span class="input-group-addon" id="addon-wrapping">
-  <i class="fa fa-user" aria-hidden="true"></i>
+  <span class="input-group-addon">
+  <i class="fa fa-eye" aria-hidden="true"></i>
   </span>
-  <input type="password" id="pass" class="form-control" required>
+  <input type="password" id="pass" class="form-control" required placeholder="Enter Password">
 <small class="invalid-feedback">Please enter the valid password</small>
 </div>
 </div>
 </div>
 <div class="form-group">
   <label for="pass">Email-id</label>
-  <input type="email" id="pass" class="form-control" required>
+  <span class="input-group-addon">
+    <i class="fa fa-envelop" aria-hidden="true"></i>
+    </span>
+  <input type="email" id="pass" class="form-control" required placeholder="Enter Email-Id">
 </div>
 <div class="form-group">
 <label for="gender">Gender</label>
@@ -160,8 +162,8 @@
 </div>    
 </form>
 </div>
-      </div>
-  </div>
+</div>
+</div>
 </div>
 <div class="modal fade" id="signin">
 <div class="modal-dialog">
