--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           </li>
         </ul>
     </div>
-    <button class="btn ml-5 btn-outline-success my-2 my-sm-0"  data-target="#login" data-toggle="modal" data-backdrop="static" type="submit">Sign Up</button>
-    <button class="btn btn-outline-success my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">Log In</button>
+    <button class="btn ml-5 btn-secondary my-2 my-sm-0"  data-target="#login" data-toggle="modal" data-backdrop="static" type="submit">Sign Up</button>
+    <button class="btn btn-secondary my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">Log In</button>
 
     </nav>
 <!--Nav bar closed  -->
@@ -135,11 +135,11 @@
 </div>
 </div>
 <div class="form-group">
-  <label for="pass">Email-id</label>
+  <label for="email">Email-id</label>
   <span class="input-group-addon">
-    <i class="fa fa-envelop" aria-hidden="true"></i>
+    <i class="fa fa-envelope" aria-hidden="true"></i>
     </span>
-  <input type="email" id="pass" class="form-control" required placeholder="Enter Email-Id">
+  <input type="email" id="email" class="form-control" required placeholder="Enter Email-Id">
 </div>
 <div class="form-group">
 <label for="gender">Gender</label>
