--- a/Gallery.html
+++ b/Gallery.html
@@ -46,7 +46,7 @@
                 <a class="nav-link text-white" href="">GALLERY</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="">MEDIA</a>
+                <a class="nav-link text-white" href="Media.html">MEDIA</a>
               </li>
                 <li class="nav-item">
                 <a class="nav-link text-white" href="ContactUs.html">CONTACT</a>
