--- a/Activites.html
+++ b/Activites.html
@@ -43,10 +43,10 @@
                 <a class="nav-link text-white" href="">ACTIVITES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="">GALLERY</a>
+                <a class="nav-link text-white" href="Gallery.html">GALLERY</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="">MEDIA</a>
+                <a class="nav-link text-white" href="Media.html">MEDIA</a>
               </li>
                 <li class="nav-item">
                 <a class="nav-link text-white" href="ContactUs.html">CONTACT</a>
