--- a/ContactUs.html
+++ b/ContactUs.html
@@ -56,7 +56,7 @@
 <button class="btn ml-5 btn-secondary my-2 my-sm-0"  data-target="#login" data-toggle="modal" data-backdrop="static" type="submit">Sign Up</button>
 <button class="btn btn-secondary my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">Log In</button>
     </nav>
-
+<!-- Nav bar closed -->
 
 
 
@@ -96,7 +96,7 @@
 </div>
 </form>
 </div>
-
+<!-- Sign Up Log In -->
 <div class="modal fade" id="login">
   <div class="modal-dialog">
       <div class="modal-content">
