--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
           <div class="carousel-caption py-5">
-              <h1 class="display-2">My Website</h1>
+              <h1 class="display-2">Our Mission</h1>
               <h3>Future is our's</h3>
               <button class="btn btn-success btn-lg">ViewMore</button>
               <button class="btn btn-primary btn-lg">ReadMore</button>
@@ -72,7 +72,7 @@
       </div>
       <div class="carousel-item">
         <div class="carousel-caption py-5">
-          <h1 class="display-2">My Nature</h1>
+          <h1 class="display-2">Our Vision</h1>
           <h3>We belong to</h3>
           <button class="btn btn-danger btn-lg">ViewMore</button>
           <button class="btn btn-warning btn-lg">ReadMore</button>
