--- a/ContactUs.html
+++ b/ContactUs.html
@@ -40,13 +40,13 @@
                 <a class="nav-link text-white" href="AboutUs.html">ABOUT US</a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link text-white" href="">ACTIVITES</a>
+                <a class="nav-link text-white" href="Activites.html">ACTIVITES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="">GALLERY</a>
+                <a class="nav-link text-white" href="Gallery.html">GALLERY</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="">MEDIA</a>
+                <a class="nav-link text-white" href="Media.html">MEDIA</a>
               </li>
                 <li class="nav-item">
                 <a class="nav-link text-white" href="">CONTACT</a>
