--- a/Gallery.html
+++ b/Gallery.html
@@ -57,7 +57,10 @@
     <div class="jumbotron-fluid">
         <h1 class="display-4 text-primary" >GALLERY</h1>
         
-
+        <img class="img-fluid" src="Images/13.jpg" alt="" width="150px" height="150px">
+        <img class="img-responsive" src="Images/15.jpg" alt="" width="150px" height="150px">
+        <img class="img-thumbnail" src="Images/16.jpg" alt="" width="150px" height="150px">
+        <img class="img-fluid img-thumbnail rounded-circle" src="Images/17.jpg" alt="" width="150px" height="150px">
 
        
 
