--- a/Gallery.html
+++ b/Gallery.html
@@ -61,11 +61,11 @@
         <img class="img-responsive" src="Images1/J2.jpg" alt="" width="325px" height="325px">
         <img class="img-responsive" src="Images1/J5.jpg" alt="" width="325px" height="325px">
         <img class="img-responsive" src="Images1/J6.jpg" alt="" width="325px" height="325px">
-        
-        <img class="img-fluid" src="Images/13.jpg" alt="" width="150px" height="150px">
-        <img class="img-responsive" src="Images/15.jpg" alt="">
-        <img class="img-thumbnail" src="Images/16.jpg" alt="" width="150px" height="150px">
-        <img class="img-fluid img-thumbnail rounded-circle" src="Images/17.jpg" alt="" width="150px" height="150px">
+        <br>
+        <img class="img-fluid img-thumbnail rounded-circle" src="Images/18.jpg" alt="" width="325px" height="325px">
+        <img class="img-fluid img-thumbnail rounded-circle" src="Images1/J11.jpg" alt="" width="325px" height="325px">
+        <img class="img-fluid img-thumbnail rounded-circle" src="Images1/J20.jpg" alt="" width="325px" height="325px">
+        <img class="img-fluid img-thumbnail rounded-circle" src="Images/17.jpg" alt="" width="325px" height="325px">
        
         <img class="img-fluid" src="Images/13.jpg" alt="" width="150px" height="150px">
         <img class="img-responsive" src="Images/15.jpg" alt="">
