--- a/Gallery.html
+++ b/Gallery.html
@@ -62,16 +62,16 @@
         <img class="img-responsive" src="Images1/J5.jpg" alt="" width="325px" height="325px">
         <img class="img-responsive" src="Images1/J6.jpg" alt="" width="325px" height="325px">
         <br>
-        <img class="img-fluid img-thumbnail rounded-circle" src="Images/18.jpg" alt="" width="325px" height="325px">
+        <img class="img-fluid img-thumbnail rounded-circle" src="Images1/18.jpg" alt="" width="325px" height="325px">
         <img class="img-fluid img-thumbnail rounded-circle" src="Images1/J11.jpg" alt="" width="325px" height="325px">
         <img class="img-fluid img-thumbnail rounded-circle" src="Images1/J20.jpg" alt="" width="325px" height="325px">
         <img class="img-fluid img-thumbnail rounded-circle" src="Images/17.jpg" alt="" width="325px" height="325px">
-       
-        <img class="img-fluid" src="Images/13.jpg" alt="" width="150px" height="150px">
-        <img class="img-responsive" src="Images/15.jpg" alt="">
-        <img class="img-thumbnail" src="Images/16.jpg" alt="" width="150px" height="150px">
-        <img class="img-fluid img-thumbnail rounded-circle" src="Images/17.jpg" alt="" width="150px" height="150px">
-
+       <div>
+        <img class="img-thumbnail" src="Images1/I1.jpg" alt="" width="325px" height="325px">
+        <img class="img-thumbnail" src="Images1/I2.jpg" alt="" width="325px" height="325px">
+        <img class="img-thumbnail" src="Images1/I3.jpg" alt="" width="325px" height="325px">
+        <img class="img-thumbnail" src="Images1/I4.jpg" alt="" width="325px" height="325px">
+      </div>
         <!-- Footer -->
 <footer class="page-footer font-small bg-dark text-white pt-4">
 
