--- a/Gallery.html
+++ b/Gallery.html
@@ -53,6 +53,7 @@
               </li>
         </ul>
     </div>
+    <button class="btn btn-secondary my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">Log In</button>
     </nav>
     <div class="jumbotron-fluid">
         <h1 class="display-4 text-primary" >GALLERY</h1>
@@ -72,6 +73,38 @@
         <img class="img-thumbnail" src="Images1/I3.jpg" alt="" width="325px" height="325px">
         <img class="img-thumbnail" src="Images1/I4.jpg" alt="" width="325px" height="325px">
       </div>
+
+
+
+      <div class="modal fade" id="signin">
+        <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h3 class="modal-title">SignUp</h3>
+        <button class="close" data-dismiss="modal">&times;</button>
+              </div>
+              <div class="modal-body">
+                  <form>
+                      <label for="email">Email</label>
+                      <input type="email" id="email" class="form-control" required>
+                      <label for="pass">Password</label>
+                      <input type="password" id="pass" class="form-control">
+                  <button  class="btn btn-success">Submit</button>
+                  <button  class="btn btn-success" data-dismiss="modal">Close</button>
+                  </form>
+              </div>
+          </div>
+        </div>
+        </div>
+
+
+
+
+
+
+
+
+
         <!-- Footer -->
 <footer class="page-footer font-small bg-dark text-white pt-4">
 
