--- a/Activites.html
+++ b/Activites.html
@@ -27,6 +27,11 @@
           border-top-right-radius: 25px;
           border-bottom-left-radius: 25px;
         }
+        .j{
+          border: 4px solid blue;
+            min-height: 60px;
+            margin: 5px;
+        }
     </style>
 </head>
 <body>
@@ -64,22 +69,22 @@
         <div class="container">
           <div class="row">
             <div class="col-8">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
+              <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
             <div class="col-8">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
+              <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
             <div class="col-8">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
+              <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
             <div class="col-8">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
+              <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
             <div class="col-8">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
+              <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
             <div class="col-8">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
+              <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
           </div>
         </div>
