--- a/Activites.html
+++ b/Activites.html
@@ -31,6 +31,8 @@
           border: 4px solid blue;
             min-height: 60px;
             margin: 5px;
+            border-top-right-radius: 25px;
+            border-bottom-right-radius: 25px;
         }
     </style>
 </head>
@@ -65,7 +67,7 @@
     </nav>
     <div class="jumbotron-fluid">
         <h1 class="display-4 text-primary" >ACTIVITES</h1>
-        <h1 class="text-primary">PROSPECTIVE EVENTS</h1>
+        <h3 class="text-primary">PROSPECTIVE EVENTS</h3>
         <div class="container">
           <div class="row">
             <div class="col-8">
