--- a/Activites.html
+++ b/Activites.html
@@ -33,6 +33,8 @@
             margin: 5px;
             border-top-right-radius: 25px;
             border-bottom-right-radius: 25px;
+            border-top-left-radius: 25px;
+            border-bottom-left-radius: 25px;
         }
     </style>
 </head>
