--- a/Gallery.html
+++ b/Gallery.html
@@ -11,7 +11,7 @@
             width: 800px;
         }
         .jumbotron-fluid .display-4{
-            background-image: url(Images1/J21.jpg) url(Images/J16);
+            background-image: url(Images1/J21.jpg) url(Images1/J16);
             background-repeat: no-repeat;
             /* background-size: cover; */
             min-height: 400px;
