--- a/Gallery.html
+++ b/Gallery.html
@@ -13,7 +13,7 @@
         .jumbotron-fluid .display-4{
             background-image: url(Images1/J21.jpg);
             background-repeat: no-repeat;
-            /* background-size: cover; */
+            background-size: cover;
             min-height: 400px;
         }
         .navbar .btn{
