--- a/Gallery.html
+++ b/Gallery.html
@@ -56,7 +56,7 @@
     <button class="btn btn-secondary my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">Log In</button>
     </nav>
     <div class="jumbotron-fluid">
-        <h1 class="display-4 text-primary" >GALLERY</h1>
+        <h1 class="display-4 text-primary" ><b>GALLERY</b></h1>
         
         <img class="img-responsive" src="Images1/J1.jpg" alt="" width="325px" height="325px">
         <img class="img-responsive" src="Images1/J2.jpg" alt="" width="325px" height="325px">
