--- a/AboutUs.html
+++ b/AboutUs.html
@@ -70,7 +70,7 @@
 <button class="btn btn-secondary my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">Log In</button>
 </nav>
 <div class="jumbotron-fluid bg-secondary my-5">
-<h1 class="display-4 text-primary">ABOUT US</h1>
+<h1 class="display-4 text-primary"><b>ABOUT US</b></h1>
 </div>
 
     <div class="jumbotron">
