--- a/ContactUs.html
+++ b/ContactUs.html
@@ -86,7 +86,7 @@
 <!-- start -->
 
 <div class="jumbotron-fluid">
-<h1 class="display-4 text-primary" >CONTACT US</h1>
+<h1 class="display-4 text-primary"><b>CONTACT US</b></h1>
 <h1 class="text-center text-primary">Interested in discussing?</h1>
 <form class="m ml-auto py-5 mx-5">
 <div class="container bg-white py-5">
