--- a/Activites.html
+++ b/Activites.html
@@ -68,7 +68,7 @@
 <button class="btn btn-secondary my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">Log In</button>
     </nav>
     <div class="jumbotron-fluid">
-        <h1 class="display-4 text-primary" >ACTIVITES</h1>
+        <h1 class="display-4 text-primary"> <b>ACTIVITES</b></h1>
         <h3 class="text-primary">PROSPECTIVE EVENTS</h3>
         <div class="container">
           <div class="row">
