--- a/Media.html
+++ b/Media.html
@@ -56,7 +56,7 @@
     <button class="btn btn-secondary my-5 my-sm-0"  data-target="#signin" data-toggle="modal" data-backdrop="static" type="submit">Log In</button>
     </nav>
     <div class="jumbotron-fluid">
-        <h1 class="display-4 text-primary" >MEDIA</h1>
+        <h1 class="display-4 text-primary"><b>MEDIA</b></h1>
         
 
 
