--- a/ContactUs.html
+++ b/ContactUs.html
@@ -111,8 +111,7 @@
 <div class="col-sm-12">
    
 <label for="mess">Message</label>
-<input type="text" id="mess" class="form-control" required placeholder="Enter Message"><br>
-       
+<textarea name="message" id="mess" class="form-control" rows="5" required placeholder="Enter Message"></textarea><br>       
 </div>
 
 <input type="submit" class="btn btn-primary" value="Send">
