--- a/AboutUs.html
+++ b/AboutUs.html
@@ -76,7 +76,7 @@
     <div class="jumbotron">
     <div class="container">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-6">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -99,7 +99,7 @@
         </a>
       </div>
     </div>
-    <div class="col-sm-6">
+    <div class="col-6">
         <h2 class="text-primary">Our Purpose</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet vero non nisi eligendi minima asperiores voluptatibus beatae at repudiandae officiis eos nostrum possimus tempora laboriosam, magnam adipisci! Quisquam impedit ratione dolorem laudantium similique optio dignissimos corporis tempora? Repellendus atque temporibus id ipsa voluptatum eligendi nulla? Perspiciatis inventore laudantium, repudiandae est sint reprehenderit labore obcaecati error praesentium consectetur facere maxime totam eos dicta expedita nulla, illo non, ipsa accusantium ut consequatur et corporis ea incidunt! Et inventore nesciunt omnis eos esse, dolorem quisquam odit nostrum vel amet numquam eaque sunt libero consectetur voluptatum, aperiam sapiente minima. Fugiat excepturi veniam aliquam porro?</p>
     </div>
@@ -109,12 +109,12 @@
     <div class="jumbotron">
         <div class="container">
             <div class="row">
-    <div class="col-sm-4">
+    <div class="col-4">
     <div class="item">
     <img src="Images/I7.jpeg" alt="" width="300px" height="250px" class="m-5" style="border:1px solid orange;border: radius 60px;box-shadow:6px 6px  #787878">
 </div>
 </div>
-<div class="col-sm">
+<div class="col">
   <h2 class="text-primary">About the Founder</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae consequatur quam perspiciatis, possimus eos reprehenderit adipisci asperiores itaque odit, sint, quidem aperiam ullam. Quod est rem delectus autem ipsum natus et possimus minima obcaecati repellendus quisquam, totam debitis harum, nemo sint, sunt alias ipsam necessitatibus maxime quas aut? Quas laborum illum eligendi deserunt, fuga est? Modi ea ducimus deleniti rem veniam vero, quidem minus ex eveniet esse magni, facere temporibus dolor incidunt. Consequatur laborum, magnam aliquid numquam veritatis dolorum obcaecati beatae cum deleniti harum architecto eaque qui. Minima qui unde neque veritatis doloremque at quia doloribus aspernatur. Veritatis, veniam tempora?</p>
 </div>
@@ -125,11 +125,11 @@
     <div class="container">
         <div class="row">
      
-        <div class="col-sm">
+        <div class="col">
           <h2 class="text-primary">About the Cofounder</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae consequatur quam perspiciatis, possimus eos reprehenderit adipisci asperiores itaque odit, sint, quidem aperiam ullam. Quod est rem delectus autem ipsum natus et possimus minima obcaecati repellendus quisquam, totam debitis harum, nemo sint, sunt alias ipsam necessitatibus maxime quas aut? Quas laborum illum eligendi deserunt, fuga est? Modi ea ducimus deleniti rem veniam vero, quidem minus ex eveniet esse magni, facere temporibus dolor incidunt. Consequatur laborum, magnam aliquid numquam veritatis dolorum obcaecati beatae cum deleniti harum architecto eaque qui. Minima qui unde neque veritatis doloremque at quia doloribus aspernatur. Veritatis, veniam tempora?</p>
         </div>
-<div class="col-sm-4">
+<div class="col-4">
 <div class="item">
 <img src="Images/I8.jpeg" alt="" width="300px" height="250px" class="m-5" style="border:1px solid orange;border: radius 60px;box-shadow:6px 6px #787878">
 </div>
