--- a/Activites.html
+++ b/Activites.html
@@ -72,22 +72,22 @@
         <h3 class="text-primary">PROSPECTIVE EVENTS</h3>
         <div class="container">
           <div class="row">
-            <div class="col-8 col-sm-8 col-md-8 col-lg-8">
+            <div class="col-8 col-sm-8">
               <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
-            <div class="col-8 col-sm-8 col-md-8 col-lg-8">
+            <div class="col-8 col-sm-8">
               <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
-            <div class="col-8 col-sm-8 col-md-8 col-lg-8">
+            <div class="col-8 col-sm-8">
               <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
-            <div class="col-8 col-sm-8 col-md-8 col-lg-8">
+            <div class="col-8 col-sm-8">
               <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
-            <div class="col-8 col-sm-8 col-md-8 col-lg-8">
+            <div class="col-8 col-sm-8">
               <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
-            <div class="col-8 col-sm-8 col-md-8 col-lg-8">
+            <div class="col-8 col-sm-8">
               <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, deleniti!</p>
             </div>
           </div>
