--- a/ContactUs.html
+++ b/ContactUs.html
@@ -113,8 +113,9 @@
 <label for="mess">Message</label>
 <textarea name="message" id="mess" class="form-control" rows="5" required placeholder="Enter Message"></textarea><br>       
 </div>
-
+<div>
 <input type="submit" class="btn btn-primary" value="Send">
+</div>
 </div>
 </div>
 </form>
